fixed css on spacing etc

--- a/frontend-all-sales/src/App.css
+++ b/frontend-all-sales/src/App.css
@@ -42,6 +42,7 @@
 
 html, body {
   height: 100%;
+  margin-top: 40px;
   background-image: linear-gradient(to top, #94b6eb, #86a8dc, #789acd, #6b8cbe, #5d7eb0);
 }
 
@@ -379,10 +380,14 @@ h3 {
 
 /** ITEM CARDS **/
 
-.item-card {
-  width: 300px;
-
+.itemPreview {
+    width: 350px;
+    height: 300px;
+    object-fit: cover;
+    /* border-radius: 10px; */
+    /* border-radius: 0px 0px 0px 0px; */
 }
+
 
 .hvr-grow-shadow {
     display: inline-block;
@@ -396,6 +401,28 @@ h3 {
     transition-property: box-shadow, transform;
 }
 
+.hvr-float-shadow:before {
+    pointer-events: none;
+    position: absolute;
+    z-index: -1;
+    content: '';
+    top: 100%;
+    left: 5%;
+    height: 10px;
+    width: 90%;
+    opacity: 0;
+    background: -webkit-radial-gradient(center, ellipse, rgba(0, 0, 0, 0.35) 0%, transparent 80%);
+    background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.35) 0%, transparent 80%);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform, opacity;
+    transition-property: transform, opacity;
+}
+
+.shadow {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 .hvr-grow-shadow:hover, .hvr-grow-shadow:focus, .hvr-grow-shadow:active {
     box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0);
     -webkit-transform: scale(1.05);
@@ -405,7 +432,6 @@ h3 {
 .item-preview {
     margin: 5px;
     margin-bottom: 25px;
-
 }
 
 #thumbnail-label {
@@ -445,5 +471,21 @@ h3 {
 }
 
 .responsive-image {
-    max-width: 100%;
+  max-width: 100%;
+  /* width: 242px;
+  height: 200px; */
+}
+
+.container {
+    margin: auto;
+    max-width: 1200px;
+    padding: 0 1rem;
+}
+
+.cell img {
+    display: block;
+}
+
+.cell {
+    margin: 1rem;
 }
